2008-08-19 [colin]	2.0.0cvs10

	* src/vcalendar.c
		Fix crash on missing answer in a reply

2008-08-17 [colin]	2.0.0cvs9

	* src/vcalendar.c
	* libical/libical/icalerror.c
		Warning fix

2008-08-07 [colin]	2.0.0cvs8

	* src/day-view.c
	* src/month-view.c
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Undeprecate

2008-08-05 [colin]	2.0.0cvs7

	* src/day-view.c
	* src/month-view.c
	* src/plugin.c
	* src/vcal_folder.c
	* src/vcalendar.c
		Undeprecate GtkCTree

2008-07-31 [colin]	2.0.0cvs6

	* src/common-views.c
	* src/common-views.h
	* src/day-view.c
	* src/month-view.c
		Get rid of the GtkItemFactory

2008-07-30 [colin]	2.0.0cvs5

	* src/plugin.c
	* src/vcal_folder.c
		Move the folderview popup menu to GtkUIManager

2008-07-29 [colin]	2.0.0cvs4

	* src/vcalendar.c
		Switch the main menu to GtkUIManager

2008-07-25 [colin]	2.0.0cvs3

	* src/vcalendar.c
		Switch the context menu in the summaryview to
		GtkUIManager

2008-07-20 [colin]	2.0.0cvs2

	* src/day-view.c
	* src/month-view.c
	* src/vcal_meeting_gtk.c
	* src/vcal_prefs.c
		Undeprecate tooltips

2008-07-08 [colin]	2.0.0cvs1

	* libical/libical/icalparser.c
		Lines can be folded with tabs in addition
		to spaces (RFC 2445, 4.1 Content Lines)

2008-06-27 [paul]	2.0.0

	version 2.0.0 released

2008-06-27 [paul]	1.102.0cvs8

	* po/es.po
	* po/fi.po
		updated by Ricardo Mones and Flammie Pirinen

2008-05-16 [paul]	1.102.0cvs7

	* src/vcal_folder.c
		fix a compiler warning

2008-05-13 [colin]	1.102.0cvs6

	* src/vcal_folder.c
		Fix lack of scanning if it hasn't been done
		when requesting one feed item

2008-05-07 [colin]	1.102.0cvs5

	* src/vcal_meeting_gtk.c
		Separate Maemo and generic UMPC code

2008-04-29 [colin]	1.102.0cvs4

	* src/vcal_folder.c
	* src/vcalendar.c
		Fix crash on cancel

2008-04-21 [colin]	1.102.0cvs3

	* src/vcal_folder.c
		Fix default view on new folders

2008-04-20 [colin]	1.102.0cvs2

	* src/day-view.c
	* src/month-view.c
	* src/vcal_interface.h
	* src/vcal_manager.c
	* src/vcalendar.c